put error page in root and made icons mobile friendly

--- a/src/pages/blogpost.html
+++ b/src/pages/blogpost.html
@@ -31,11 +31,11 @@
     
         <div class="social-links">
            <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-              <i class="fab fa-linkedin fa-2x"></i> fab</a>
+              <i class="fab fa-linkedin fa-2x"></i></a>
           <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-              <i class="fab fa-instagram fa-2x"></i>fab</a>
+              <i class="fab fa-instagram fa-2x"></i></a>
           <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-              <i class="fab fa-facebook fa-2x"></i>fab </a>
+              <i class="fab fa-facebook fa-2x"></i></a>
         </div>
      </nav>
     </header>
@@ -121,12 +121,12 @@
         <p>&copy; 2024 Justlikewiseman All Rights Reserved</p>
         <div class="social-links">
           <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-              <i class="fab fa-linkedin"></i> LinkedIn</a>
+              <i class="fab fa-linkedin fa-2x"></i></a>
           <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-              <i class="fab fa-instagram"></i> instagram</a>
+              <i class="fab fa-instagram fa-2x"></i></a>
           <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-              <i class="fab fa-facebook"></i> facebook</a>
+              <i class="fab fa-facebook fa-2x"></i></a>
         </div>
-    </footer>
+      </footer>
 </body>
 </html>
