--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -203,17 +203,16 @@
                     <button class="cta-button">Reach Out</button>
                   </div>
                 </div>   
-                <footer>
-                  <p>&copy; 2024 Justlikewiseman All Rights Reserved</p>
-                  <div class="social-links">
-                    <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-                        <i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-                        <i class="fab fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-                        <i class="fab fa-facebook"></i></a>
-                  </div>
-                </footer>
-
-           
+                
+        <footer>
+          <p>&copy; 2024 Justlikewiseman All Rights Reserved</p>
+          <div class="social-links">
+            <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
+                <i class="fab fa-linkedin fa-2x"></i></a>
+            <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
+                <i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
+                <i class="fab fa-facebook fa-2x"></i></a>
+          </div>
+        </footer>  
 </body>
