--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -52,11 +52,11 @@
 
     <div class="social-links">
        <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-          <i class="fab fa-linkedin fa-2x"></i> fab</a>
+          <i class="fab fa-linkedin fa-2x"></i></a>
       <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-          <i class="fab fa-instagram fa-2x"></i>fab</a>
+          <i class="fab fa-instagram fa-2x"></i></a>
       <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-          <i class="fab fa-facebook fa-2x"></i>fab </a>
+          <i class="fab fa-facebook fa-2x"></i></a>
     </div>
  </nav>
   </header>
@@ -223,20 +223,16 @@
                 </div>
                 <button id="faqReachOutButton" class="cta-button">Reach Out</button>
               </div>
-            </div>
-
-           
-            <footer>
-              <p>&copy; 2024 Justlikewiseman All Rights Reserved</p>
-              <div class="social-links">
-                <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-                    <i class="fab fa-linkedin"></i>Fab</a>
-                <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-                    <i class="fab fa-instagram"></i>Fab</a>
-                <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-                    <i class="fab fa-facebook"></i>Fab</a>
-              </div>
-            </footer>
-
-           
+            </div>    
+        <footer>
+          <p>&copy; 2024 Justlikewiseman All Rights Reserved</p>
+          <div class="social-links">
+            <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
+                <i class="fab fa-linkedin fa-2x"></i></a>
+            <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
+                <i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
+                <i class="fab fa-facebook fa-2x"></i></a>
+          </div>
+        </footer>         
 </body>
