--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Personal Website</title>
+    <title>My Personal Website | Justlikewiseman</title>
   </head>
   <body>
-    <!-- Redirect to home.html in the src folder -->
+    <!-- Redirect to homepage.html in the src folder -->
     <meta http-equiv="refresh" content="0; url=src/pages/homepage.html" />
   </body>
 </html>
