--- a/src/pages/homepage.html
+++ b/src/pages/homepage.html
@@ -289,11 +289,11 @@
           <p>&copy; 2024 Justlikewiseman All Rights Reserved</p>
           <div class="social-links">
             <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-                <i class="fab fa-linkedin"></i></a>
+                <i class="fab fa-linkedin fa-2x"></i></a>
             <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-                <i class="fab fa-instagram"></i></a>
+                <i class="fab fa-instagram fa-2x"></i></a>
             <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-                <i class="fab fa-facebook"></i></a>
+                <i class="fab fa-facebook fa-2x"></i></a>
           </div>
         </footer>
 
