--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -37,22 +37,27 @@
     <div class="logo">
       <a href="./homepage.html">Justlikewiseman</a>
     </div>
+    <button class="hamburger" aria-label="Toggle navigation">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
   
     <div class="nav-links">
       <a href="./homepage.html">Home</a>
       <a href="./homepage.html#About-me">About</a>
-      <a href="#">Services</a>
-      <a href="./projects.html">Projects</a>
-      <a href="contact.html">Contact</a>
+      <a href="./services.html">Services</a>
+      <a href="#">Projects</a>
+      <a href="./contact.html">Contact</a>
     </div>
 
     <div class="social-links">
        <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-          <i class="fab fa-linkedin fa-2x"></i> fab</a>
+          <i class="fab fa-linkedin fa-2x"></i></a>
       <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-          <i class="fab fa-instagram fa-2x"></i>fab</a>
+          <i class="fab fa-instagram fa-2x"></i></a>
       <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-          <i class="fab fa-facebook fa-2x"></i>fab </a>
+          <i class="fab fa-facebook fa-2x"></i></a>
     </div>
  </nav>
   </header>
@@ -71,17 +76,16 @@
     </div>
 
      <!-- Footer -->
-    <footer>
-        <p>&copy; 2024 Justlikewiseman All Rights Reserved</p>
-        <div class="social-links">
-          <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-              <i class="fab fa-linkedin"></i> LinkedIn</a>
-          <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-              <i class="fab fa-instagram"></i> instagram</a>
-          <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
-              <i class="fab fa-facebook"></i> facebook</a>
-        </div>
+     <footer>
+      <p>&copy; 2024 Justlikewiseman All Rights Reserved</p>
+      <div class="social-links">
+        <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
+            <i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
+            <i class="fab fa-instagram fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/justlikewiseman" class="linkedin-link" target="_blank">
+            <i class="fab fa-facebook fa-2x"></i></a>
+      </div>
     </footer>
-
 </body>
 </html>
