working on projects page

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -61,17 +61,61 @@
     </div>
  </nav>
   </header>
-
-    <h1>My Creative Projects</h1>
+    <h1 class="sub-heading">My Creative Projects</h1>
     <div class="container">
         <!-- Projects Grid -->
         <div class="projects-grid" id="projects-grid">
-            <!-- Dynamic content will go here -->
+          <div class="p-cards">
+            <div class="p-card p1">
+              <div class='p-details'>
+                <p>Project Name</p>
+                <button>View</button>
+              </div>
+            </div>
+            <div class="p-card p2">
+              <div class='p-details'>
+                <p>Project Name</p>
+                <button>View</button>
+              </div>
+            </div>
+            <div class="p3 p-card">
+              <div class='p-details'>
+                <p>Project Name</p>
+                <button>View</button>
+              </div>
+            </div>
+            <div class="p4 p-card">
+              <div class='p-details'>
+                <p>Project Name</p>
+                <button>View</button>
+              </div>
+            </div>
+            <div class="p5 p-card">
+              <div class='p-details'>
+                <p>Project Name</p>
+                <button>View</button>
+              </div>
+            </div>
+            <div class="p6 p-card">
+              <div class='p-details'>
+                <p>Project Name</p>
+                <button>View</button>
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- Sidebar -->
-        <div class="sidebar" id="sidebar">
-            <!-- Dynamic sidebar content will go here -->
+        <div class="p-sidebar">
+          <h3 class="sub-heading">Latest Projects </h3>
+          <div>
+            <img src="" alt="">
+            <p></p>
+          </div>
+          <div class="p-cta">
+          <a href="./contact.html">HIRE ME</a>
+          </div>
+           
         </div>
     </div>
 
