--- a/error.html
+++ b/error.html
@@ -7,8 +7,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Justlikewiseman | Not Found</title>
-        <link rel="stylesheet" href="../styles/globals.css">
-        <link rel="stylesheet" href="../styles/error.css" >
+        <link rel="stylesheet" href="./src/styles/globals.css">
+        <link rel="stylesheet" href="./src/styles/error.css" >
     </head>
     <body>
         <div class="not-found-container">
@@ -16,7 +16,8 @@
             <h1>404</h1>
             <p>Oops! The page you are looking for doesn't exist.</p>
             <p>It might have been moved, deleted, or the URL is incorrect.</p>
-            <a href="homepage.html" class="cta-button">Go Back to Home</a>
+            <a href="./src/pages/h
+            omepage.html" class="cta-button">Go Back to Home</a>
         </div>  
 </body>
 </html>
