--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -103,7 +103,7 @@
                 </div>
                 
                 <form class="c-form" id="contactForm">
-                  <input id="name" class="c-name" placeholder="Your Name" type="text" name="name" required />
+                  <input id="name" class="c-name" placeholder="Your Name" type="text" name="name" required minlength="5"/>
                   <input id="email" class="c-email" placeholder="Email" type="email" name="email" required />
                   <input id="phone" class="c-phone" placeholder="Phone" type="tel" name="phone" required />
                   <input id="subject" placeholder="Subject" type="text" name="subject" required />
