--- a/src/pages/homepage.html
+++ b/src/pages/homepage.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Justlikewiseman | Home</title>
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-12345ABC" crossorigin="anonymous">
     
     <!-- Font Awesome (for icons) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -18,15 +15,12 @@
     <link rel="stylesheet" href="../styles/globals.css">
     <link rel="stylesheet" href="../styles/styles.css">
 
-     <!-- Link to local Bootstrap CSS -->
-     <!-- <link rel="stylesheet" href="./bootstrap-5.3.3-dist/css/bootstrap.min.css"> -->
-
     <!-- Optional: Meta tags for SEO and Social Media -->
     <meta name="description" content="Justlikewiseman - Personal site for showcasing projects and more.">
     <meta property="og:title" content="Justlikewiseman">
     <meta property="og:description" content="Explore my recent projects and achievements.">
-    <meta property="og:image" content="link-to-image.jpg"> <!-- Replace with actual image URL -->
-    <meta property="og:url" content="https://your-website.com">
+    <meta property="og:image" content="../imgs/code.jpg">
+    <meta property="og:url" content="https://ugfrds.github.io/portfolio/src/pages/homepage.html">
     <script  src="../scripts/h-script.js" defer ></script>
     <script  src="../scripts/common.js" defer ></script>
 
@@ -68,8 +62,10 @@
             <p>Full-Stack </p>
              <p>Developer</p>
            </div>
+           <div class="header-buttons">
            <button class=" cta-button header-button">Hire Me</button>
-
+           <a class="header-button CV" href="../public/Justlikewiseman resume.pdf" download="">Download CV</a>
+          </div>
            <div class="hero-subheading">
              <p >OPEN TO WORK</p>
              <p class="location">Based in Uganda</p>
@@ -118,7 +114,11 @@
                         <p>I am Kibirige Moses a.k.a Wiseman</p>
                         <li></li>
                         <p> A creative Full-Stack Developer with expertise in frontend Development,
-                          UX Design, Web Security and Proficiency in React js, Node js, Sql, Html, Css & JavaScript, and Wordpress.
+                          UX Design, Web Security and Proficiency in
+                           <span>React js, </span><span>Next js, </span> <span>Node js,</span> 
+                           <span>Sql,</span> <span>JavaScript & Typescript,</span> <span>Tailwind, </span>
+                            <span>Bootstrap, </span> <span>Figma, </span> <span>Photoshop, </span> <span>Canva</span> &
+                            <span>Wordpress</span> 
                         </p>
                         <li></li>
                         <p> I have been working with web technologies for over 7 years (since 2017)</p>
@@ -177,7 +177,7 @@
             <i class="fab fa-html5 fa-2x"></i>
               <p class="s-sub-heading">Web Design & Development</p>
               <p class="s-text">
-                 Crafting Visually Stunning Websites & Applications with seemless navigation<br>
+                 Crafting Visually Stunning Websites & Applications with seemless navigation
                  and engaging user-interfaces tailored to your Brand's unique needs.
               </p>
               <button class="s-cta s1-cta">Learn More</button>
@@ -187,8 +187,8 @@
             <div class="s-description">
               <p class="s-sub-heading">Wordpress Customization</p>
               <p class="s-text">
-              Transforming your Wordpress site into a powerful Online Presence<br>
-              with customised themes, plugins & Optimization for enhanced Perfomance <br>
+              Transforming your Wordpress site into a powerful Online Presence
+              with customised themes, plugins & Optimization for enhanced Perfomance 
               and User Experience.
               </p>
             </div>
@@ -201,7 +201,7 @@
 
             <p class="s-sub-heading">Website/Web-app Mantainance  & Support</p>
             <p class="s-text">
-              Providing On-going Support & Mantainance Services to keep your<br>
+              Providing On-going Support & Mantainance Services to keep your
                Website/Application running smoothly
             </p>
             <button class="s-cta s3-cta">Learn More</button>
